--- a/app/src/main/res/layout/fragment_flights_book.xml
+++ b/app/src/main/res/layout/fragment_flights_book.xml
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/total_guest_label" />
+            android:text="@string/total_label" />
 
         <LinearLayout
             android:layout_width="match_parent"
