--- a/app/src/main/res/layout/fragment_hotel_book.xml
+++ b/app/src/main/res/layout/fragment_hotel_book.xml
@@ -44,13 +44,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:text="@string/total_guest_label" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:text="@string/duration_label" />
 
             <TextView
@@ -67,48 +60,49 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/std_margin">
 
-            <NumberPicker
-                android:id="@+id/np_fragment_hotel_book_total_guest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/std_margin"
-                android:layout_marginStart="@dimen/std_margin"
-                android:gravity="center_vertical"
-                android:text="@string/guest_label" />
-
-            <NumberPicker
-                android:id="@+id/np_fragment_hotel_book_duration"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/std_margin"
-                android:layout_marginStart="@dimen/std_margin" />
+                android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/std_margin"
-                android:layout_marginStart="@dimen/std_margin"
-                android:gravity="center_vertical"
-                android:text="@string/day_label" />
+                <NumberPicker
+                    android:id="@+id/np_fragment_hotel_book_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/std_margin"
+                    android:layout_marginStart="@dimen/std_margin" />
 
-            <NumberPicker
-                android:id="@+id/np_fragment_hotel_book_total_room"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/std_margin"
+                    android:layout_marginStart="@dimen/std_margin"
+                    android:gravity="center_vertical"
+                    android:text="@string/day_label" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/std_margin"
-                android:layout_marginStart="@dimen/std_margin" />
+                android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/std_margin"
-                android:layout_marginStart="@dimen/std_margin"
-                android:gravity="center_vertical"
-                android:text="@string/room_label" />
+                <NumberPicker
+                    android:id="@+id/np_fragment_hotel_book_total_room"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/std_margin"
+                    android:layout_marginStart="@dimen/std_margin" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/std_margin"
+                    android:layout_marginStart="@dimen/std_margin"
+                    android:gravity="center_vertical"
+                    android:text="@string/room_label" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
