--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,6 +10,8 @@
         android:id="@+id/iv_fragment_profile_prof_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_alignBottom="@+id/tv_fragment_profile_logout"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:contentDescription="@string/fragment_profile_pp_label"
