--- a/app/src/main/res/layout/fragment_train_book.xml
+++ b/app/src/main/res/layout/fragment_train_book.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/std_margin"
             android:gravity="center"
-            android:text="@string/total_guest_label" />
+            android:text="@string/total_label" />
 
         <LinearLayout
             android:layout_width="match_parent"
