--- a/app/src/main/res/layout/fragment_hotel_book.xml
+++ b/app/src/main/res/layout/fragment_hotel_book.xml
@@ -1,118 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/std_parent_padding">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/std_margin"
-            android:labelFor="@+id/spinner_fragment_hotel_book_destination"
-            android:text="@string/destination_label" />
-
-        <Spinner
-            android:id="@+id/spinner_fragment_hotel_book_destination"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/std_margin"
-            android:text="@string/date_label" />
-
-        <Button
-            android:id="@+id/btn_fragment_hotel_book_date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/date_picker_label" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/std_margin">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:text="@string/duration_label" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:text="@string/total_room_label" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/std_margin">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <NumberPicker
-                    android:id="@+id/np_fragment_hotel_book_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/std_margin"
-                    android:layout_marginStart="@dimen/std_margin" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/std_margin"
-                    android:layout_marginStart="@dimen/std_margin"
-                    android:gravity="center_vertical"
-                    android:text="@string/day_label" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <NumberPicker
-                    android:id="@+id/np_fragment_hotel_book_total_room"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/std_margin"
-                    android:layout_marginStart="@dimen/std_margin" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/std_margin"
-                    android:layout_marginStart="@dimen/std_margin"
-                    android:gravity="center_vertical"
-                    android:text="@string/room_label" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_fragment_hotel_book_do_book"
-        style="@style/primary_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/order_label" />
-
-</LinearLayout>
+    android:gravity="center"
+    android:padding="@dimen/std_parent_padding"
+    android:text="Coming Soon" />
